Updated all fields in the profile section to be observables and updated modal to "fake" change when user updates info

--- a/OracleJETApplication/templates/partials/employee-edit-modal/employee-edit-modal-large.tmpl.html
+++ b/OracleJETApplication/templates/partials/employee-edit-modal/employee-edit-modal-large.tmpl.html
@@ -96,6 +96,12 @@
                 </div>
             </div>
             <div class="oj-row">
+                <span class="oj-col oj-lg-5">Email</span>
+                <div class="oj-col oj-lg-7">
+                    <input data-bind="ojComponent: {component: 'ojInputText', value: email}" />
+                </div>
+            </div>
+            <div class="oj-row">
                 <span class="oj-col oj-lg-5">Phone</span>
                 <div class="oj-col oj-lg-7">
                     <input data-bind="ojComponent: {component: 'ojInputText', value: phone}" />
