--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -5,50 +5,51 @@
             <div class="oj-row">
                 <div class="oj-col oj-lg-6">
                     <h4>Name</h4>
-                    <span data-bind="text: $parent.firstName"></span>
-                    <span data-bind="text: $parent.lastName"></span>
+                    <span data-bind="text: $parent.firstName()"></span>
+                    <span data-bind="text: $parent.lastName()"></span>
 
-                    <div data-bind="visible: $parent.posCheckName">
+                    <div data-bind="visible: $parent.posCheckName()">
                         <h4>POS Check Name</h4>
-                        <div data-bind="text: $parent.posCheckName"></div>
+                        <div data-bind="text: $parent.posCheckName()"></div>
                     </div>
 
                     <h4>Language</h4>
-                    <div data-bind="text: $parent.language"></div>
+                    <div data-bind="text: $parent.language()"></div>
 
                     <h4>Time Zone</h4>
-                    <div data-bind="text: $parent.timeZone"></div>
+                    <div data-bind="text: $parent.timeZone()"></div>
 
                     <div>
                         <h4>Ethnicity</h4>
-                        <div data-bind="text: $parent.ethnicity"></div>
+                        <div data-bind="text: $parent.ethnicity()"></div>
                     </div>
                     <div>
                         <h4>Gender</h4>
-                        <div data-bind="text: $parent.gender"></div>
+                        <div data-bind="text: $parent.gender()"></div>
                     </div>
                 </div>
                 <div class="oj-col oj-lg-6">
 
                     <h4>Profile Picture</h4>
+                    <!--Not hooked up to an observable this may need to be an upload feature-->
                     <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />
 
                     <h4>Veteran</h4>
-                    <div data-bind="text: $parent.veteranStatus"></div>
+                    <div data-bind="text: $parent.veteranStatus()"></div>
                     <!--doesn't update on modal change, need to work on this-->
-                    <div data-bind="visible: $parent.veteranStatusVisible()">
-                        <div data-bind="text: $parent.vietnamEra"></div>
-                        <div data-bind="text: $parent.otherEligible"></div>
-                        <div data-bind="text: $parent.otherProtected"></div>
-                        <div data-bind="text: $parent.armedForcesServiceMedal"></div>
-                        <div data-bind="text: $parent.recentlySeparated"></div>
-                        <div data-bind="text: $parent.specialDisabled"></div>
+                    <div data-bind="visible: $parent.veteranStatus() == 'yes'">
+                        <div data-bind="text: $parent.vietnamEra()"></div>
+                        <div data-bind="text: $parent.otherEligible()"></div>
+                        <div data-bind="text: $parent.otherProtected()"></div>
+                        <div data-bind="text: $parent.armedForcesServiceMedal()"></div>
+                        <div data-bind="text: $parent.recentlySeparated()"></div>
+                        <div data-bind="text: $parent.specialDisabled()"></div>
 
                         <h4>Registered Disable Number</h4>
-                         <div data-bind="text: $parent.registeredDisabledNumber"></div>
+                         <div data-bind="text: $parent.registeredDisabledNumber()"></div>
 
                         <h4>Discharge Date</h4>
-                         <div data-bind="text: $parent.dischargeDate"></div>
+                         <div data-bind="text: $parent.dischargeDate()"></div>
                     </div>
                 </div>
             </div>
@@ -61,38 +62,37 @@
                 <div class="oj-col oj-lg-6">
                     <div>
                         <h4>Email Address</h4>
-                        <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.personProfile().email+'@example.net'"></a>
+                        <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email() + '@example.net'"></a>
                     </div>
                     <h4>Phone Number</h4>
-                    <div data-bind="text: $parent.phone"></div>
+                    <div data-bind="text: $parent.phone()"></div>
                     <div>
                         <h4>Other Phone Number</h4>
-                        <div data-bind="text: $parent.mobile"></div>
+                        <div data-bind="text: $parent.mobile()"></div>
                     </div>
 
-<!--                    NOT Working<div data-bind="visible: $parent.faxNumber">-->
-                    <div>
+                    <div data-bind="visible: $parent.faxNumber()">
                         <h4>FAX Number</h4>
-                        <div data-bind="text: $parent.faxNumber"></div>
+                        <div data-bind="text: $parent.faxNumber()"></div>
                     </div>
                     <h4>Address</h4>
-                        <div data-bind="text: $parent.address1"></div>
-                        <div data-bind="text: $parent.address2"></div>
-                        <span data-bind="text: $parent.city"></span>
-                        <span data-bind="text: $parent.state"></span>
-                        <span data-bind="text: $parent.postal"></span>
-                        <span data-bind="text: $parent.country"></span>
+                        <div data-bind="text: $parent.address1()"></div>
+                        <div data-bind="text: $parent.address2()"></div>
+                        <span data-bind="text: $parent.city()"></span>
+                        <span data-bind="text: $parent.state()"></span>
+                        <span data-bind="text: $parent.postal()"></span>
+                        <span data-bind="text: $parent.country()"></span>
                 </div>
                 <div class="oj-col oj-lg-6">
                     <div>
                         <h4>Emergency Contact</h4>
-                        <span data-bind="html: $parent.emergencyName"></span>
-                        <span data-bind="html: $parent.relationship"></span>
-                        <div data-bind="html: $parent.emergencyAddress"></div>
-                        <span data-bind="html: $parent.emergencyCity"></span>
-                        <span data-bind="html: $parent.emergencyState"></span>
-                        <span data-bind="html: $parent.emergencyZipCode"></span>
-                        <div data-bind="html: $parent.emergencyPhone"></div>
+                        <span data-bind="html: $parent.emergencyName()"></span>
+                        <span data-bind="html: $parent.formattedRelationship()"></span>
+                        <div data-bind="html: $parent.emergencyAddress()"></div>
+                        <span data-bind="html: $parent.emergencyCity()"></span>
+                        <span data-bind="html: $parent.emergencyState()"></span>
+                        <span data-bind="html: $parent.emergencyZipCode()"></span>
+                        <div data-bind="html: $parent.emergencyPhone()"></div>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
     </div>
     <h3 class="oj-col oj-lg-12">Custom</h3>
 </div>
-<!--Backup of fields pulled from array no using observables-->
+<!--Backup of fields pulled from array not using observables-->
 <!--
 <div class="oj-row">
     <div class="general-section">
