--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -1,8 +1,8 @@
 <div class="oj-row">
-    <div class="oj-col oj-lg-10">
+    <div class="oj-col oj-sm-10 oj-lg-10">
         <h2 id="currentPage" data-bind="text: label"></h2>
     </div>
-    <div class="oj-col oj-lg-2 oj-lg-text-align-end">
+    <div class="oj-col oj-sm-2 oj-lg-2 oj-lg-text-align-end">
         <div data-bind="click: $parent.handleOpen" style="line-height:39px;">Edit</div>
     </div>
 </div>
