--- a/OracleJETApplication/templates/profile.tmpl.html
+++ b/OracleJETApplication/templates/profile.tmpl.html
@@ -2,23 +2,21 @@
 <script type="text/html" id="sm_template">
 <div class="justifyCenter">
     <div id="personaldetails" class="oj-row">
-        <div class="oj-col oj-md-1 oj-lg-1">
+        <div class="oj-col oj-sm-5 oj-md-1 oj-lg-1">
             <img data-bind="attr: {src: getPhoto(personProfile().empId)}" />
         </div>
-        <div class="oj-col oj-md-2 oj-lg-2">
-            <div data-bind="text: personProfile().firstName + ' ' + personProfile().lastName"></div>
-        </div>
-        <div class="oj-col oj-md-3 oj-lg-3">
+
+        <div class="oj-col oj-sm-7 oj-md-2 oj-lg-2">
+            <h2 class="employee-name" data-bind="text: personProfile().firstName + ' ' + personProfile().lastName"></h2>
+
            <h4>Home Store</h4>
            <span data-bind="text: personProfile().homeStore"></span>
            <a href="#">transfer</a>
-        </div>
-        <div class="oj-col oj-md-3 oj-lg-3">
+
            <h4>Hire Status</h4>
            <span data-bind="text: personProfile().hireStatus"></span>
            <a href="#">update</a>
-        </div>
-        <div class="oj-col oj-md-3 oj-lg-3">
+
            <h4>External Payroll ID</h4>
            <span data-bind="text: personProfile().externalPayrollId"></span>
            <a href="#">edit</a>
@@ -39,11 +37,11 @@
     </div>
     <div class="oj-md-12 oj-col" data-bind="if: tabRouter.stateId()">
         <div class="oj-panel tab-content" data-bind="with: tabRouter.currentState()">
-            <h2 id="currentPage" data-bind="text: label"></h2>
             <div data-bind="template: {name: 'profile/' + id +'/' + id + '-small'}"></div>
         </div>
     </div>
 </div>
+<div data-bind="template: {name: 'partials/employee-edit-modal/employee-edit-modal-large'}"></div>
 </script>
 
 <!-- large template -->
@@ -54,7 +52,7 @@
             <img data-bind="attr: {src: getPhoto(personProfile().empId)}" />
         </div>
         <div class="oj-col oj-md-2 oj-lg-2">
-            <div data-bind="text: personProfile().firstName + ' ' + personProfile().lastName"></div>
+            <h2 data-bind="text: personProfile().firstName + ' ' + personProfile().lastName"></h2>
         </div>
         <div class="oj-col oj-md-3 oj-lg-3">
            <h4>Home Store</h4>
