--- a/OracleJETApplication/templates/profile/profile/profile-small.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-small.tmpl.html
@@ -1,87 +1,108 @@
 <div class="oj-row">
-    <div class="general-section">
-        <div class="oj-col oj-lg-6">
-            <h3>General</h3>
-            <div class="oj-row">
-                <div class="oj-col oj-lg-6">
-                    <h4>Name</h4>
-                    <div data-bind="text: $parent.personProfile().firstName + ' ' + $parent.personProfile().lastName"></div>
+    <div class="oj-col oj-sm-10 oj-lg-10">
+        <h2 id="currentPage" data-bind="text: label"></h2>
+    </div>
+    <div class="oj-col oj-sm-2 oj-lg-2 oj-lg-text-align-end">
+        <div data-bind="click: $parent.handleOpen" style="line-height:39px;">Edit</div>
+    </div>
+</div>
+<div class="oj-row">
+    <div class="oj-col oj-lg-6">
+        <h3>General</h3>
+        <div class="oj-row">
+            <div class="oj-col oj-lg-6">
+                <h4>Name</h4>
+                <span data-bind="text: $parent.firstName()"></span>
+                <span data-bind="text: $parent.lastName()"></span>
 
-                    <div data-bind="visible: $parent.personProfile().posCheckName">
-                        <h4>POS Check Name</h4>
-                        <div data-bind="text: $parent.personProfile().posCheckName"></div>
-                    </div>
-
-                    <h4>Language</h4>
-                    <div data-bind="text: $parent.personProfile().language"></div>
-
-                    <h4>Time Zone</h4>
-                    <div data-bind="text: $parent.personProfile().timeZone"></div>
-
-                    <div>
-                        <h4>Ethnicity</h4>
-                        <div data-bind="text: $parent.personProfile().ethnicity"></div>
-                    </div>
-                    <div>
-                        <h4>Gender</h4>
-                        <div data-bind="text: $parent.personProfile().gender"></div>
-                    </div>
+                <div data-bind="visible: $parent.posCheckName()">
+                    <h4>POS Check Name</h4>
+                    <div data-bind="text: $parent.posCheckName()"></div>
                 </div>
-                <div class="oj-col oj-lg-6">
 
-                    <h4>Profile Picture</h4>
-                    <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />
+                <h4>Language</h4>
+                <div data-bind="text: $parent.language()"></div>
 
-                    <h4>Veteran</h4>
-                    <div data-bind="text: $parent.personProfile().veteranStatus ? 'yes' : 'no'"></div>
-                    <div data-bind="visible: $parent.personProfile().veteranStatus">
-                        <div data-bind="text: $parent.personProfile().vietnamEra ? 'Vietnam Era' : ''"></div>
-                        <div data-bind="text: $parent.personProfile().otherEligible ? 'Other Eligible' : ''"></div>
-                        <div data-bind="text: $parent.personProfile().otherProtected ? 'Other Protected' : ''"></div>
-                        <div data-bind="text: $parent.personProfile().armedForcesServiceMedal ? 'Armed Forces Service Medal' : ''"></div>
-                        <div data-bind="text: $parent.personProfile().recentlySeparated ? 'Recently Separated' : ''"></div>
-                        <div data-bind="text: $parent.personProfile().specialDisabled ? 'Special Disabled' : ''"></div>
+                <h4>Time Zone</h4>
+                <div data-bind="text: $parent.timeZone()"></div>
 
-                        <h4>Registered Disable Number</h4>
-                         <div data-bind="text: $parent.personProfile().registeredDisabledNumber"></div>
+                <div>
+                    <h4>Ethnicity</h4>
+                    <div data-bind="text: $parent.ethnicity()"></div>
+                </div>
+                <div>
+                    <h4>Gender</h4>
+                    <div data-bind="text: $parent.gender()"></div>
+                </div>
+            </div>
+            <div class="oj-col oj-lg-6">
 
-                        <h4>Discharge Date</h4>
-                         <div data-bind="text: $parent.getDischargeDate()"></div>
-                    </div>
+                <h4>Profile Picture</h4>
+                <!--Not hooked up to an observable this may need to be an upload feature-->
+                <img data-bind="attr: {src: $parent.getPhoto($parent.personProfile().empId)}" />
+
+                <h4>Veteran</h4>
+                <div data-bind="text: $parent.veteranStatus()"></div>
+                <!--doesn't update on modal change, need to work on this-->
+                <div data-bind="visible: $parent.veteranStatus() == 'yes'">
+                    <div data-bind="text: $parent.vietnamEra()"></div>
+                    <div data-bind="text: $parent.otherEligible()"></div>
+                    <div data-bind="text: $parent.otherProtected()"></div>
+                    <div data-bind="text: $parent.armedForcesServiceMedal()"></div>
+                    <div data-bind="text: $parent.recentlySeparated()"></div>
+                    <div data-bind="text: $parent.specialDisabled()"></div>
+
+                    <h4>Registered Disable Number</h4>
+                    <div data-bind="text: $parent.registeredDisabledNumber()"></div>
+
+                    <h4>Discharge Date</h4>
+                    <div data-bind="text: $parent.dischargeDate()"></div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="contact-section">
-        <div class="oj-col oj-lg-6">
-            <h3>Contact</h3>
-            <div class="oj-row">
-                <div class="oj-col oj-lg-6">
-                    <div>
-                        <h4>Email Address</h4>
-                        <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.personProfile().email+'@example.net'"></a>
-                    </div>
-                    <h4>Phone Number</h4>
-                    <div data-bind="text: $parent.personProfile().phone"></div>
-                    <div>
-                        <h4>Other Phone Number</h4>
-                        <div data-bind="text: $parent.personProfile().mobile"></div>
-                    </div>
-                    <div data-bind="visible: $parent.personProfile().faxNumber">
-                        <h4>FAX Number</h4>
-                        <div data-bind="text: $parent.personProfile().faxNumber"></div>
-                    </div>
-                    <h4>Address</h4>
-                    <div data-bind="html: $parent.formatAddress()"></div>
+    <div class="oj-col oj-lg-6">
+        <h3>Contact</h3>
+        <div class="oj-row">
+            <div class="oj-col oj-lg-6">
+                <div>
+                    <h4>Email Address</h4>
+                    <a data-bind="attr:{href: $parent.getEmail($data)}, text: $parent.email() + '@example.net'"></a>
                 </div>
-                <div class="oj-col oj-lg-6">
-                    <div>
-                        <h4>Emergency Contact</h4>
-                        <div data-bind="html: $parent.formatEmergencyContact()"></div>
-                    </div>
+                <h4>Phone Number</h4>
+                <div data-bind="text: $parent.phone()"></div>
+                <div>
+                    <h4>Other Phone Number</h4>
+                    <div data-bind="text: $parent.mobile()"></div>
+                </div>
+
+                <div data-bind="visible: $parent.faxNumber()">
+                    <h4>FAX Number</h4>
+                    <div data-bind="text: $parent.faxNumber()"></div>
+                </div>
+                <h4>Address</h4>
+                <div data-bind="text: $parent.address1()"></div>
+                <div data-bind="text: $parent.address2()"></div>
+                <span data-bind="text: $parent.city()"></span>
+                <span data-bind="text: $parent.state()"></span>
+                <span data-bind="text: $parent.postal()"></span>
+                <span data-bind="text: $parent.country()"></span>
+            </div>
+            <div class="oj-col oj-lg-6">
+                <div>
+                    <h4>Emergency Contact</h4>
+                    <span data-bind="html: $parent.emergencyName()"></span>
+                    <span data-bind="html: $parent.formattedRelationship()"></span>
+                    <div data-bind="html: $parent.emergencyAddress()"></div>
+                    <span data-bind="html: $parent.emergencyCity()"></span>
+                    <span data-bind="html: $parent.emergencyState()"></span>
+                    <span data-bind="html: $parent.emergencyZipCode()"></span>
+                    <div data-bind="html: $parent.emergencyPhone()"></div>
                 </div>
             </div>
         </div>
     </div>
-    <h3 class="oj-col oj-lg-12">Custom</h3>
+    <div class="oj-col oj-lg-12">
+        <h3>Custom</h3>
+    </div>
 </div>
