added link back to people page

--- a/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/profile/profile-large.tmpl.html
@@ -105,6 +105,9 @@
     <div class="oj-col oj-lg-12">
         <h3>Custom</h3>
     </div>
+    <div class="oj-col oj-lg-12 oj-lg-text-align-end">
+         <a data-bind="attr:{href: 'index.html?root=people'}">Back to Search</a>
+    </div>
 </div>
 <!--Backup of fields pulled from array not using observables-->
 <!--
