--- a/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-large.tmpl.html
+++ b/OracleJETApplication/templates/profile/schedules-timecards/schedules-timecards-large.tmpl.html
@@ -1,28 +1,34 @@
 <div class="justifyCenter">
-
+    <div class="oj-col oj-sm-10 oj-lg-10">
+        <h2 id="currentPage" data-bind="text: label"></h2>
+    </div>
     <div class="oj-row">
         <div class="oj-md-12 scheduleHeaderArea">
             <span class="scheduleHeader"> Schedule</span><span class="timeOffRequest"><a href="#">Time Off Request</a>
         </div> 
-        
+
     </div>
     <div class="oj-row">
         <div class="oj-md-12 currentWeekHeaderArea">
             <div class="currentWeekHeader">Current Week (8/40) <a href="#" class="shiftPoolLink">Shift Pool</a></div>
+                                
+                                                       <a data-bind="click:$parent.handleOpen" style="line-height:39px;">    click       </a>  
         </div>
         <div class="oj-md-12">
             <div id="filmStripDiv" class="oj-panel" style="margin: '20px';  width='776px'">
               <div id="filmStrip" aria-label="Set of chemicals" data-bind="ojComponent: {component: 'ojFilmStrip', arrowPlacement: self.currentNavArrowPlacement, arrowVisibility: self.currentNavArrowVisibility}">
-                <!-- ko foreach: $parent.personProfile().currentScheduledDates -->
-                    <div class="oj-panel oj-panel-alt2 demo-filmstrip-item" data-bind="style: {display: getItemInitialDisplay($index())}">
+                  <!-- ko foreach: $parent.currentScheduledDates -->
 
-                        <div data-bind="text: location"></div>
-                        <div data-bind="text: revenueCenter"></div>
-                        <div data-bind="text: station"></div>
-                        <div data-bind="text: status"></div>
-                        <div data-bind="text: notes"></div>
+                  <div class="oj-panel oj-panel-alt2 demo-filmstrip-item" data-bind="style: {display: getItemInitialDisplay($index())}">
+
+                      <div data-bind="text: dayStart"></div>
+                      <div data-bind="text: dayEnd"></div>
+                      <div data-bind="text: station"></div>
+                        
                     </div>
+
                 <!-- /ko -->
+
               </div>
             </div> <!-- end filmStripDiv -->
         </div>
@@ -32,18 +38,11 @@
             <div class="upcomingWeekHeader">Upcoming Week (8/40) <a href="#" class="shiftPoolLink">Shift Pool</a></div>
         </div>
         <div class="oj-md-12">
+
+                                    <div data-bind="text: $parent.personProfile().currentScheduledDates[6].dayStart;"></div>
             <div id="filmStripDiv" class="oj-panel" style="margin: '20px';  width='776px'">
               <div id="filmStrip" aria-label="Set of chemicals" data-bind="ojComponent: {component: 'ojFilmStrip', arrowPlacement: self.currentNavArrowPlacement, arrowVisibility: self.currentNavArrowVisibility}">
-                <!-- ko foreach: $parent.personProfile().currentScheduledDates -->
-                    <div class="oj-panel oj-panel-alt2 demo-filmstrip-item" data-bind="style: {display: getItemInitialDisplay($index())}">
 
-                        <div data-bind="text: location"></div>
-                        <div data-bind="text: revenueCenter"></div>
-                        <div data-bind="text: station"></div>
-                        <div data-bind="text: status"></div>
-                        <div data-bind="text: notes"></div>
-                    </div>
-                <!-- /ko -->
               </div>
             </div> <!-- end filmStripDiv -->
         </div>
